chore: sonar fixes
Signed-off-by: jaivalis <johnaivalis@gmail.com>